src/components/ProductCard/ProductCard.css
.card {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  text-align: center;
  background-color: white;
  padding: 20px;
  border-radius: 5px;
  width: 20%;
}

.card p {
  padding-top: 5px;
  font-size: 12px;
}

.card h3 {
  padding: 10px 0;
}

.card:hover {
  cursor: pointer;
  background-color: #eee9;
  transform: scale(1.01);
}

.card:hover .button{
  background-color: #0b3658;
  color: white;
  font-weight: bold;
  transform: scale(1.01);
}

.card .product-img {
  height: auto;
  width: 100%;
}

.card .addtocart {
  color: #888;
  background-color: white;
  border: 1px solid #707070;
  margin-top: 10px;
  padding: 8px;
  width: 100%;
}

@media only screen and (max-width: 600px) {
  .card {
    flex: 35%; 
    padding: 10px;
    border-radius: 5px;
  }

  .card .addtocart {
    padding: 10px;
  }
}

